# hell

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  HellConfig.cmake  Makefile  README.md  appveyor.yml  meson.build
.github/workflows/: build  main.sh  main.yml  test
.travis/: install
include/: allocation.h  api.h  compress.h  compression-context.h  compression-mode.h  compressors.h  constants.h  decompress.h  header-layout.h  header.h  hell.h  io.h  lut.h  test-tools.h  types.h
src/: CMakeLists.txt  allocation.c  api.c  compress.c  compression-context.c  compressors.c  constants.c  decompress.c  hal.c  header-layout.c  header.c  hell.c  io.c  make-lut.c  test-tools.c
src/common/: CMakeLists.txt  constants.c  constants.h  no-return.h  restrict.h
src/core/: CMakeLists.txt  allocation.c  allocation.h  compress.c  compress.h  compression-context.c  compression-context.h  compression-mode.h  compressors.c  compressors.h  decompress.c  decompress.h  header.c  header.h  util.c  util.h
src/core/make-lut/: CMakeLists.txt  lut.h  main.c
src/core/make-meta/: CMakeLists.txt  main.c.in  meta.h
src/hell/: CMakeLists.txt  main.c
src/io/: CMakeLists.txt  io.c  io.h
src/libhell/: CMakeLists.txt  allocation.c  allocation.h  compress.c  compression-context.c  compressors.c  decompress.c  header.c  header.h  hell.h  util.c
src/libhell/make-lut/: CMakeLists.txt  main.c
src/make-lut/: main.c
src/test/: CMakeLists.txt  tools.c  tools.h
test/: CMakeLists.txt  copy-bytes-bit-reversed-advanced.c  copy-bytes-bit-reversed.c  copy-bytes-reversed.c  copy-bytes.c  decompress.c  fill-byte-large.c  fill-byte-small.c  fill-bytes-large.c  fill-bytes-small-max.c  fill-bytes-small.c  fill-incremental-sequence-0-255-0-255.c  fill-incremental-sequence-0-255.c  fill-incremental-sequence-small.c  meson.build  uncompressed-uint16.c  uncompressed-uint8.c
test/compression/: CMakeLists.txt  abc.c  all-bytes-1.c  all-bytes-2.c  byte-pair.c  lz-20.c  lz-25.c  lz-30.c  meson.build  mixed.c  overscan.c  reversed-bits-overlap.c  reversed-bits.c  reversed-bytes.c  uncompressed-1.c
test/compressors/: CMakeLists.txt  copy-bytes-1.c  copy-bytes-1024.c  copy-bytes-32.c  copy-bytes-33.c  copy-reversed-bits-1.c  copy-reversed-bits-1024.c  copy-reversed-bits-32.c  copy-reversed-bits-33.c  copy-reversed-bytes-1.c  copy-reversed-bytes-1024.c  copy-reversed-bytes-32.c  copy-reversed-bytes-33.c  fill-byte-1.c  fill-byte-1024.c  fill-byte-32.c  fill-byte-33.c  fill-byte.c  fill-bytes-1.c  fill-bytes-1024.c  fill-bytes-32.c  fill-bytes-33.c  fill-incremental-sequence-1.c  fill-incremental-sequence-1024.c  fill-incremental-sequence-32.c  fill-incremental-sequence-33.c  meson.build  uncompressed-1.c  uncompressed-1024.c  uncompressed-32.c  uncompressed-33.c  uncompressed-uint8.c  uncompressed.c
test/decompression/: CMakeLists.txt  copy-bytes-bit-reversed-advanced.c  copy-bytes-bit-reversed.c  copy-bytes-reversed.c  copy-bytes.c  fill-byte-large.c  fill-byte-small.c  fill-bytes-large.c  fill-bytes-small-max.c  fill-bytes-small.c  fill-incremental-sequence-0-255-0-255.c  fill-incremental-sequence-0-255.c  fill-incremental-sequence-small.c  meson.build  uncompressed-1.c  uncompressed-2.c  uncompressed-uint16.c  uncompressed-uint8.c
